	  type is chosen based on PER visible constraints (Test cases 90, 91).
	* Union structures for CHOICE type are not anonymous anymore.
	* Made unber(1) program more verbose: effective structure length is
	  now displayed as L="<n>" at the closing tag. (Test check-xxber.sh).
	* Fixed unber(1)'s -1 switch for indefinite encoding length.

0.9.17:	2005-Aug-07

	* Tagging mode is implicitly IMPLICIT if AUTOMATIC TAGS is used, #30.6.
	  (Test cases 55, 86).
	* Started to use extern "C" {} in skeleton headers.
	* Introduced -finline-choice command line option to fix
	  yet another class of circular references.

0.9.16:	2005-July-04

	* GeneralizedTime API now supports fractions of seconds.
	  Thanks to Bent Nicolaisen <BN@JAI.com> for support.
	* ASN.1 parser has been tweaked to allow parsing something like
	  "SEQUENCE----comment----", which is ambiguous for many reasons.
	* XER decoder better handles not-yet-defined future extensions.

0.9.15: 2005-July-02

	* Compiler now checks 64-bit overflows in constraints range handling
	  code. No effect on the code produced by the compiler.
	* Compiler support for tagged and marked parametrized members.
	* Empty tags to element map avoided.
	* Compiled code GCC 4.x compatibility.

0.9.14:	2005-Apr-29

	* Fixed check-70.-fnative-integers.c test (it was failing
	  when no test directory was found).

0.9.13:	2005-Apr-24

	* Added extra const qualifiers into the support code.
	* More RFC variations supported in crfc2asn1.pl.
	* Refined string values compatibility. (Test cases 77, 78).
	* Support for ContainedSubtype constraints. (Test case 16).
	* Parsing support for CONSTRAINED BY. (Test case 79).
	* Support for CharsDefn (Quadruple and Tuple, most used in
	  ASN1-CHARACTER-MODULE) (Test case 80).
	* Pretty-printing support for WITH COMPONENT[S]. (Test case 82).
	* Streamed OCTET STRING decoding of large values: fixed allocation
	  problem introduced in 0.9.9. (Severity: high; Security impact: medium)